heading add to this page

--- a/reg.html
+++ b/reg.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <h1>Register Form<h1>
 
   <div class="form-container">
     <h2>Register for Event</h2>
